samples/map/valid/R11.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref href="parent.dita" collection-type="family">
    <topicref href="child.dita" collection-type="sequence"/>
  </topicref>
</map>