samples/map/invalid/R3.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <topicmeta/>
  <title>Map Title</title>
  <topicref href="topic.dita" collection-type="family"/>
</map>